<resources>
    <string name="app_name">维度影院</string>
    <string name="submission">提交</string>
    <string name="click_login">点击登录</string>
    <string name="please_login">请先登陆</string>
    <string name="not_login">未登录</string>
    <string name="user_attend_text">签到</string>
    <string name="user_info_text">我的信息</string>
    <string name="user_attent_text">我的关注</string>
    <string name="user_record_text">购票记录</string>
    <string name="user_feedback_text">意见反馈</string>
    <string name="user_version_text">版本更新</string>
    <string name="user_logout_text">退出登录</string>
    <string name="final_project">毕业作品</string>
    <string name="version_text_title">版本升级</string>
    <string name="version_text_message">软件更新</string>
    <string name="alter_pop_sure">确定</string>
    <string name="alter_pop_cancel">取消</string>
    <string name="feedback_text_toast">请输入意见反馈内容</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_text_hint">感谢您对维度影院的支持与关注，我们会认真处理您的反馈，尽快修复和完善相关功能。</string>
    <string name="feedback_edit_hint">写下您对产品的感受！工作人员将会第一时间评估处理。</string>
    <string name="address_cancel_check">取消选择</string>
    <string name="selected_success">查询成功</string>
    <string name="hot_flim">热门电影</string>
    <string name="relaese_film">正在热映</string>
    <string name="screen_film">即将上映</string>
    <string name="none_data">无数据</string>
    <string name="not_has_more">没有更多数据了</string>
    <string name="recomm_cinema">推荐影院</string>
    <string name="near_cinema">附近影院</string>
    <string name="film_overdue">影片已过期</string>
    <string name="detail">详情</string>
    <string name="comment">评论</string>
    <string name="film_not_data">没有影片信息</string>
    <string name="zhi_pay_non_support">支付宝支付暂时未做</string>
    <string name="sign_name_hint">昵称</string>
    <string name="sign_sex_man">男</string>
    <string name="sign_sex_woman">女</string>
    <string name="sign_data_hint">出生日期</string>
    <string name="sign_phone_hint">手机号</string>
    <string name="sign_email_hint">邮箱</string>
    <string name="sign_pwd_hint">登录密码</string>
    <string name="sign_text">注册</string>
    <string name="edit_not_can_empty">请确认输入框是否为空</string>
    <string name="pwd_rule">密码长度为6-20的数字或字母</string>
    <string name="email_rule">请输入合法的邮箱号</string>
    <string name="phone_rule">请输入合法的手机号</string>
    <string name="please_install">请先安装应用</string>
    <string name="login_phone_rule">手机号格式不正确，请重新输入</string>
    <string name="login_pwd_rule">密码格式不正确，请重新输入</string>
    <string name="login_rule">账号或密码不能为空</string>
    <string name="login">登录</string>
    <string name="third_fast_login">第三方账号快速登录</string>
    <string name="remeber_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="fast_sign">快速注册</string>
    <string name="login_pwd">登录密码</string>
    <string name="send">发送</string>
    <string name="write_review">写评论</string>
    <string name="film_review">影评</string>
    <string name="review_not_rule">评论内容不能为空</string>
    <string name="success_attent">关注成功</string>
    <string name="cancel_attent">取消关注成功</string>
</resources>
