<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp_24"
    android:paddingRight="@dimen/dp_24"
    tools:context=".mine.activity.FeedBackActivity">
    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/user_feedback_text"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/colorTabUnSelected"
        android:layout_marginTop="@dimen/dp_30"
        />
    <LinearLayout
        android:id="@+id/layout_success"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_140">
        <ImageView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:background="@mipmap/success"
            android:layout_marginBottom="@dimen/dp_30" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/feedback_success"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorTabUnSelected" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/feedback_text_hint"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_30"
            android:textColor="#666666"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_70"
        app:layout_constraintTop_toBottomOf="@id/feedback"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:background="#20400a33"
        android:padding="@dimen/dp_20">
        <EditText
            android:id="@+id/edit_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/colorText"
            android:hint="@string/feedback_edit_hint"/>
    </LinearLayout>
    <TextView
        android:id="@+id/submission"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_25"
        android:text="@string/submission"
        android:gravity="center"
        android:background="@drawable/cinema_tab_bg_slected"
        android:textColor="@color/colorTabSelected"
        android:textSize="@dimen/sp_12"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_20"/>
    <ImageView
        android:id="@+id/return_image"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:background="@mipmap/com_icon_return_default"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>