<?xml version="1.0" encoding="utf-8"?>
<com.bw.movie.mine.view.ZoomInScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_100">
        <ImageView
            android:id="@+id/user_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_210"
            android:background="@mipmap/my_back_image"
            />
        <ImageView
            android:id="@+id/push"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_24"
            android:background="@mipmap/my_icon_remind_default"
            />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/user_simple"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_72"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_centerHorizontal="true"
            fresco:roundAsCircle="true"
            fresco:placeholderImage="@mipmap/login"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="#fff"
            android:text="@string/click_login"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_simple"
            />
        <Button
            android:id="@+id/user_attend"
            android:layout_width="@dimen/dp_66"
            android:layout_height="@dimen/dp_28"
            android:text="@string/user_attend_text"
            android:textColor="#fff"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_name"
            android:background="@drawable/user_attend_bg"
            />

        <RelativeLayout
            android:id="@+id/relative_one"
            android:layout_width="@dimen/dp_310"
            android:paddingTop="@dimen/dp_15"
            android:background="@drawable/mine_linear_bg"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_back"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_height="@dimen/dp_86">
            <RelativeLayout
                android:id="@+id/relative_user_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_24"
                >
                <ImageView
                    android:id="@+id/user_message"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/my_icon_messiage_default"
                    />
                <TextView
                    android:id="@+id/user_text_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_message"
                    android:text="@string/user_info_text"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_two"
            android:layout_below="@id/relative_one"
            android:layout_width="@dimen/dp_310"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingTop="@dimen/dp_15"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mine_linear_bg"
            android:layout_height="@dimen/dp_86">
            <RelativeLayout
                android:id="@+id/relative_user_attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                >
                <ImageView
                    android:id="@+id/user_attention"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:src="@mipmap/my_icon_attention_default"
                    />
                <TextView
                    android:id="@+id/user_text_attention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_attention"
                    android:text="@string/user_attent_text"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/relative_user_record"
                >
                <ImageView
                    android:id="@+id/user_record"
                    android:layout_centerHorizontal="true"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@mipmap/my_icon_rccord_default"
                    />
                <TextView
                    android:id="@+id/user_text_record"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_record"
                    android:text="@string/user_record_text"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_three"
            android:layout_width="@dimen/dp_310"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@id/relative_two"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/dp_15"
            android:background="@drawable/mine_linear_bg"
            android:layout_height="@dimen/dp_86">
            <RelativeLayout
                android:id="@+id/relative_user_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                >
                <ImageView
                    android:id="@+id/user_feedback"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:src="@mipmap/my_icon_feedback_default"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/user_text_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_feedback"
                    android:text="@string/user_feedback_text"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/relative_user_version"
                >
                <ImageView
                    android:id="@+id/user_version"
                    android:layout_centerHorizontal="true"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@mipmap/my_icon_version_default"
                    />
                <TextView
                    android:id="@+id/user_text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_version"
                    android:text="@string/user_version_text"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_user_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_alignParentRight="true"
                >
                <ImageView
                    android:id="@+id/user_logout"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/my_icon_logout_default"
                    android:layout_marginBottom="@dimen/dp_10"
                    />
                <TextView
                    android:id="@+id/user_text_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_logout"
                    android:text="@string/user_logout_text"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/final_project"
            android:layout_below="@id/relative_three"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</com.bw.movie.mine.view.ZoomInScrollView>
